Added images to portfolio

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <section class="projects">
             <h2>Projects</h2>
             <div class="project-card">
-                <img src="https://via.placeholder.com/300x180?text=Sonic+Timeline" alt="Sonic the Hedgehog Timeline">
+                <img src="img/Sonic Timeline Photo.jpg" alt="Sonic the Hedgehog Timeline">
                 <div>
                     <h3>Sonic the Hedgehog Timeline</h3>
                     <p>A timeline showcasing the history of Sonic the Hedgehog with clickable cards that describe each game.</p>
-                    <a href="https://daringdeveloper25.github.io/Sonic-the-Hedgehog-timeline/" target="_blank">View Project</a>
+                    <a href="https://daringdeveloper25.github.io/Sonic-the-Hedgehog-ti" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/300x180?text=Intel+Sustainability" alt="Intel Sustainability Timeline">
+                <img src="img/Intel Sustainability Photo.jpg" alt="Intel Sustainability Timeline">
                 <div>
                     <h3>Intel Sustainability Timeline</h3>
                     <p>A timeline that showcases the history of sustainability at Intel throughout its history.</p>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/300x180?text=NASA+Space+Explorer" alt="NASA Space Explorer">
+                <img src="img/NASA Space Explorer Project Image.jpg" alt="NASA Space Explorer">
                 <div>
                     <h3>NASA Space Explorer</h3>
                     <p>A website that shows new pictures of outer space and facts about them every day using NASA's photo API.</p>
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/300x180?text=Purity+Pursuit" alt="Purity Pursuit">
+                <img src="img/Purity Pursuit Project Image.jpg" alt="Purity Pursuit">
                 <div>
                     <h3>Purity Pursuit</h3>
                     <p>A web game made to promote the organization Charity: Water and its cause.</p>
