Added correct images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="img/Intel Sustainability Photo.jpg" alt="Intel Sustainability Timeline">
+                <img src="img/Intel Sustainability Project.jpg" alt="Intel Sustainability Timeline">
                 <div>
                     <h3>Intel Sustainability Timeline</h3>
                     <p>A timeline that showcases the history of sustainability at Intel throughout its history.</p>
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="img/Purity Pursuit Project Image.jpg" alt="Purity Pursuit">
+                <img src="img/Purity Pursuit.jpg" alt="Purity Pursuit">
                 <div>
                     <h3>Purity Pursuit</h3>
                     <p>A web game made to promote the organization Charity: Water and its cause.</p>
@@ -60,7 +60,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 John Hunt</p>
+        <p>&copy; 2026 John Hunt</p>
     </footer>
     <script src="script.js"></script>
 </body>
