Added Charles Martinet Cultural Catalysts Poster to portfolio

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
                     <p class="click-hint">Click to see more</p>
                 </div>
             </div>
+            <div class="project-card graphic-design-card">
+                <img src="img/Charles Martinet Cultural Catalysts Poster.jpg" alt="Graphic Design Project 4" class="clickable-image">
+                <div>
+                    <h3>Cultural Catalysts: Charles Martinet</h3>
+                    <p>Building on the Forgotten Figures concept, I decided to create a similar project featuring someone who is still alive and has made a significant contribution to pop culture. For this poster, I chose to use the same colors as the source picture to create a stronger visual connection. This poster celebrates their impact while maintaining the same research-driven and visually cohesive design approach.</p>
+                    <p class="click-hint">Click to see more</p>
+                </div>
+            </div>
         </section>
         <section class="contact">
             <h2>Contact</h2>
